--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="255"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="okw-21-cET" id="IWF-MQ-6F2">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="254.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="255"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Helio Diff Hair Design" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S52-T1-cH9">
@@ -177,7 +177,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1aa-Mk-N4o" id="1xQ-Io-WoA">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </tableViewCellContentView>
@@ -210,7 +210,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iEj-PT-2Kz" id="10N-G6-VLH">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </tableViewCellContentView>
@@ -243,7 +243,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6vn-vN-wap" id="9ws-SU-bHn">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </tableViewCellContentView>
@@ -347,7 +347,7 @@
             <objects>
                 <tableViewController id="DpF-uD-Kxl" customClass="HBSalonDetailTableViewController" customModule="horabella" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="213" sectionHeaderHeight="28" sectionFooterHeight="28" id="spv-U2-07e">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -367,10 +367,15 @@
                                         <segment title="Avaliações"/>
                                         <segment title="Detalhes"/>
                                     </segments>
+                                    <color key="tintColor" red="1" green="0.40784313725490196" blue="0.47843137254901957" alpha="1" colorSpace="calibratedRGB"/>
                                     <connections>
                                         <action selector="indexChanged:" destination="DpF-uD-Kxl" eventType="valueChanged" id="swG-7U-aRV"/>
                                     </connections>
                                 </segmentedControl>
+                                <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="O8g-1C-1wC">
+                                    <rect key="frame" x="280" y="218" width="39" height="37"/>
+                                    <animations/>
+                                </pageControl>
                             </subviews>
                             <animations/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -380,7 +385,9 @@
                                 <constraint firstItem="8BB-Ej-RDU" firstAttribute="leading" secondItem="Gqr-uK-7fg" secondAttribute="leading" constant="10" id="R6s-fA-HLL"/>
                                 <constraint firstAttribute="bottom" secondItem="8BB-Ej-RDU" secondAttribute="bottom" constant="8" id="YZo-ve-p1o"/>
                                 <constraint firstItem="UVd-33-cy0" firstAttribute="top" secondItem="Gqr-uK-7fg" secondAttribute="top" id="cOH-cA-We0"/>
+                                <constraint firstItem="O8g-1C-1wC" firstAttribute="centerY" secondItem="Gqr-uK-7fg" secondAttribute="centerY" constant="90" id="dbw-3p-8nb"/>
                                 <constraint firstAttribute="trailing" secondItem="UVd-33-cy0" secondAttribute="trailing" id="gZf-D9-K60"/>
+                                <constraint firstItem="O8g-1C-1wC" firstAttribute="centerX" secondItem="Gqr-uK-7fg" secondAttribute="centerX" id="jCI-ga-kkH"/>
                                 <constraint firstAttribute="trailing" secondItem="8BB-Ej-RDU" secondAttribute="trailing" constant="10" id="lGI-HP-PV8"/>
                             </constraints>
                         </view>
@@ -467,7 +474,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.14509803921568626" green="0.050980392156862744" blue="0.15294117647058825" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="commentsLabel" destination="c9A-xP-M8N" id="LVg-bJ-ash"/>
                                     <outlet property="evaluationLabel" destination="B9Y-nY-BWi" id="Y16-UQ-PWC"/>
@@ -478,7 +485,7 @@
                                 <rect key="frame" x="0.0" y="397" width="600" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lYn-3b-6FZ" id="L6P-59-iHq">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Tv-hu-C8B">
@@ -526,7 +533,7 @@
                                 <rect key="frame" x="0.0" y="442" width="600" height="116"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tw4-fE-MH2" id="wEK-sh-sZi">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="115.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="116"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2VF-Ie-9Rs">
@@ -543,7 +550,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="qVU-ry-Qbi"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -553,14 +560,14 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="Unk-9J-46N"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comentario" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rAH-Hz-JvO">
                                             <rect key="frame" x="91" y="50" width="501" height="58"/>
                                             <animations/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -595,6 +602,8 @@
                             <outlet property="delegate" destination="DpF-uD-Kxl" id="sni-Jc-nz1"/>
                         </connections>
                     </tableView>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="1000"/>
                     <connections>
                         <outlet property="picturesScrollView" destination="UVd-33-cy0" id="KcI-Yx-RNy"/>
                         <outlet property="segControl" destination="8BB-Ej-RDU" id="dbp-UI-U9t"/>
@@ -602,7 +611,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6wH-I0-gVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2518" y="-468"/>
+            <point key="canvasLocation" x="2583" y="-540"/>
         </scene>
     </scenes>
     <resources>
