--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5H8-H4-MlW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5H8-H4-MlW">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -402,7 +402,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="76"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Wc-VF-Mof">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starPinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2Wc-VF-Mof">
                                             <rect key="frame" x="8" y="20" width="35" height="35"/>
                                             <animations/>
                                             <constraints>
@@ -443,7 +443,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pRf-6W-h3y">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="commentPinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="pRf-6W-h3y">
                                             <rect key="frame" x="459" y="21" width="35" height="35"/>
                                             <animations/>
                                             <constraints>
@@ -451,7 +451,7 @@
                                                 <constraint firstAttribute="width" constant="35" id="iJE-Qa-mYv"/>
                                             </constraints>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I43-9O-sg1">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoritePinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="I43-9O-sg1">
                                             <rect key="frame" x="226" y="21" width="35" height="35"/>
                                             <animations/>
                                             <constraints>
@@ -621,12 +621,15 @@
         <image name="TesteSalaoBackground" width="187" height="88"/>
         <image name="agendaTab_off" width="26" height="27"/>
         <image name="agendaTab_on" width="26" height="27"/>
+        <image name="commentPinkIcon" width="26" height="19"/>
         <image name="dealsTab_off" width="27" height="28"/>
         <image name="dealsTab_on" width="30" height="31"/>
+        <image name="favoritePinkIcon" width="30" height="26"/>
         <image name="favorite_on" width="24" height="21"/>
         <image name="profileTab_off" width="19" height="26"/>
         <image name="profileTab_on" width="17" height="25"/>
         <image name="saloesTab_off" width="40" height="18"/>
         <image name="saloesTab_on" width="39" height="18"/>
+        <image name="starPinkIcon" width="17" height="15"/>
     </resources>
 </document>
