--- a/horabella/Login.storyboard
+++ b/horabella/Login.storyboard
@@ -24,7 +24,7 @@
                                     <constraint firstAttribute="height" constant="30" id="p5C-vM-Opc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="je6-L0-qIf">
                                 <rect key="frame" x="20" y="355" width="560" height="30"/>
